# ProSA-Teleinfo

./: Cargo.toml  README.md
.github/workflows/: ci.yml
prosa_teleinfo_macros/: Cargo.toml  README.md
src/: adaptor.rs  lib.rs  observability.rs  proc.rs  teleinfo.rs
